# pf2e_npc_generator

./: Cargo.toml  LICENSE  README.md  default.nix  name
.cargo/: config.toml
.github/workflows/: rust.yml
data/: ancestries.ron  ancestries.ron.bak  archetypes.ron  archetypes.ron.bak  backgrounds.ron  backgrounds.ron.bak  build-archetype.sh  heritages.ron  names.ron
data/scripts/: default_format_flavor_description_line.glu
npc_generator/: Cargo.toml
npc_generator/src/: main.rs  ui.rs
npc_generator/src/ui/: generator_format.rs  ui_data.rs
npc_generator_core/: Cargo.toml
npc_generator_core/resources/test/: ancestries.ron
npc_generator_core/src/: ability.rs  age_range.rs  ancestries.rs  ancestry.rs  archetype.rs  background.rs  dice.rs  formats.rs  generators.rs  heritage.rs  language.rs  lib.rs  mutation.rs  named_element.rs  newtypes.rs  npc_options.rs  proficiencies.rs  sense.rs  size.rs  skills.rs  statblock.rs  traits.rs  weight_presets.rs  weighted_container.rs
