[package]
name = "npc_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2", features = ["persistence", "serde"] }
egui = "0.27.2"
npc_generator_core = {path = "../npc_generator_core" }
rand = { version = "0.8.5", features = ["serde"] }
rayon = "1.10.0"
ron = "0.8.1"
serde = "1.0.203"
