[features]
default = []
rayon = ["dep:rayon", "indicatif/rayon"]

[package]
name = "npc_generator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
dirs = "5.0.1"
eframe = { version = "0.27.2", features = ["serde", "glow"] }
egui = "0.27.2"
indicatif = "0.17.8"
log = "0.4.21"
native-dialog = "0.7.0"
npc_generator_core = {path = "../npc_generator_core" }
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["serde"] }
rayon = { version = "1.10.0", optional = true }
ron = "0.8.1"
serde = "1.0.203"
thiserror = "1.0.61"
zip = "2.1.3"

[profile.release]
debug = 1
