[package]
name = "npc_generator_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluon = "0.18.2"
log = "0.4.21"
rand = "0.8.5"
rhai = "1.18.0"
serde = { version = "1.0.203", features = ["std", "derive", "alloc", "rc"] }
thiserror = "1.0.61"

[dev-dependencies]
ron = "0.8.1"
