[package]
name = "npc_generator_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluon = { version = "0.18.2", features = ["serde", "serialization"] }
lazy_static = "1.5.0"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["std", "derive", "alloc", "rc"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "tokio-macros", "rt-multi-thread", "macros"] }

[dev-dependencies]
ron = "0.8.1"
